fix cors filter and docker files